--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DonghaoWu/Stock-app.git"
+    "url": "https://github.com/DonghaoWu/Stock-app.git"
   },
   "author": "Donghao",
   "license": "MIT",
