--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
+    "finnhub": "^1.2.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
