--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-moment": "^0.9.2",
